# hybrid-rag-poc

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  environment.yml  pyproject.toml  startup.sh
notebooks/: preprocess.py  upsert_to_neo4j.py
src/: main.py  setup_routes.py
src/components/rag/: routes.py
src/components/rag/routers/: get_full_context_of_indicator.py  get_indicator_type.py  graph_traversal_connected.py  search.py
src/shared/clients/: neo4j_client.py  qdrant_client.py
src/shared/db/: neo4j_client.py  neo4j_models.py
src/shared/services/: chunk_service.py  embedding_model_manager.py  indicator.py  neo4j_data_extractor.py  parse_pdf.py  pdf_parser.py  rag_service.py  threat_actor_extractor.py
src/shared/utils/: download_embedding_model.py  json_serializer.py  preload_models.py  settings.py
